--- a/week3/activity/index.html
+++ b/week3/activity/index.html
@@ -12,10 +12,10 @@
     <p>On the Insert tab, the galleries include items that are designed to coordinate with the overall look of your document. You can use these galleries to insert:</p>
     <ul>
       <li class="red">Table</li>
-      <li class="red">Headers</li>
+      <li class="white">Headers</li>
       <li class="pink">Footers</li>
-      <li class="red">Lists</li>
-      <li class="red">Cover pages</li>
+      <li class="white">Lists</li>
+      <li class="white">Cover pages</li>
     </ul>
     <p>and other <span class="red underline">document building blocks.</span></p>
 
@@ -41,3 +41,4 @@
 
 </body>
 </html>
+
