--- a/midterm/index.html
+++ b/midterm/index.html
@@ -252,7 +252,7 @@
   </div>
 </section>
 <!-- Footer -->
-<footer class="bg-white text-white py-5">
+<footer class="bg-darkgreen text-white py-5">
   <div class="container">
     <div class="row">
       <div class="col-md-3 mb-3">
@@ -290,4 +290,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
